[package]
name = "netqueue"
version = "0.1.0"
edition = "2021"

[features]
default = []
tls = ["rustls", "rustls-pemfile", "tokio-rustls"]

[dependencies]
rustls = { version = "0.23.18", optional = true }
rustls-pemfile = { version = "2.2.0", optional = true }
tokio = { version = "1.41.1", features = ["full"] }
tokio-rustls = { version = "0.26.0", optional = true }
